<resources>
    <string name="app_name">PopMovies</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="err_msg_no_network">No network</string>
    <string name="err_msg_invalid_query">Invalid query string</string>
    <string name="movie_poster_image">Movie poster image</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="genre_label">Genre</string>
    <string name="language_label">Language</string>
    <string name="user_rating_label">User rating</string>
    <string name="user_votes_label">User votes</string>
    <string name="movie_plot_label">Overview</string>
    <string name="original_name_label">Original name</string>
    <string name="release_date_label">Release date</string>
    <string name="trailers_label">Trailers and more</string>
    <string name="btn_description_play_trailer">Play trailer</string>
    <string name="str_header_movie_reviews">Movie Reviews</string>
    <string name="str_review_header_example">There is a reason why this movie is..</string>
    <string name="str_review_author_example">Jane Doe</string>
    <string name="str_review_url_example">https://www.themoviedb.org/review/5ae800510e0a264fa7000c70</string>
    <string name="str_trailer_site_example">YouTube</string>
    <string name="str_trailer_type_example">Trailer</string>
    <string name="str_trailer_slash">/</string>
    <string name="str_trailer_name_example">The Shawshank Redemption - Trailer</string>
    <string name="str_review_content_sample">There is a reason why this movie is at the top of any popular list your will find. Very strong performances from lead actors and a story line from the literary brilliance of Stephen King (and no, its not a horror). Sufficient drama and depth to keep you interested and occupied without stupefying your brain. It is the movie that has something for everyone.</string>
    <string name="str_genre_list_sample">Romance, adventure, action</string>
    <string name="favorites">Favorites</string>
</resources>
