<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group app:showAsAction="ifRoom">
        <item
            android:id="@+id/switch_most_popular"
            android:title="@string/popular"
            android:orderInCategory="2"
            app:showAsAction="always">
        </item>
        <item
            android:id="@+id/switch_most_rated"
            android:title="@string/top_rated"
            android:orderInCategory="3"
            app:showAsAction="always">
        </item>
        <item
            android:id="@+id/switch_favorites"
            android:title="@string/favorites"
            android:orderInCategory="4"
            app:showAsAction="always">
        </item>
    </group>
</menu>