<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintGuide_percent="0.33"/>

    <TextView
        android:id="@+id/trailer_name"
        style="@style/Text14withBottomPadding"
        android:layout_width="0dp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/btn_play_trailer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        tools:text="@string/str_trailer_name_example"/>

    <TextView
        android:id="@+id/trailer_type"
        style="@style/Text14withBottomPadding"
        app:layout_constraintStart_toStartOf="@+id/trailer_name"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        tools:text="@string/str_trailer_type_example"/>

    <ImageButton
        android:id="@+id/btn_play_trailer"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/yt_logo_rgb_dark"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:contentDescription="@string/btn_description_play_trailer"
        android:layout_marginStart="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>